removed Debug, And COrretto typo